Refactored, auto-generate client with swagger
