# product-api/swagger.yaml
@@ -8,7 +8,7 @@ definitions:
       Message:
         type: string
     type: object
-    x-go-package: github.com/undergg/go-microservices-tutorial/handlers
+    x-go-package: github.com/undergg/go-microservices-tutorial/product-api/handlers
   Product:
     description: Product defines the structure for an API product
     properties:
@@ -45,12 +45,12 @@ definitions:
     - sku
     title: Product defines the structure for an API product.
     type: object
-    x-go-package: github.com/undergg/go-microservices-tutorial/data
+    x-go-package: github.com/undergg/go-microservices-tutorial/product-api/data
   Products:
     items:
       $ref: '#/definitions/Product'
     type: array
-    x-go-package: github.com/undergg/go-microservices-tutorial/data
+    x-go-package: github.com/undergg/go-microservices-tutorial/product-api/data
 info:
   description: Documentation for Product API
   title: of Product API
@@ -71,6 +71,16 @@ paths:
         "201":
           $ref: '#/responses/noContentResponse'
       summary: Add a product in the database.
+      tags:
+      - products
+    put:
+      operationId: putProduct
+      responses:
+        "201":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+      summary: Updates a product from the database.
       tags:
       - products
   /products/{id}:
@@ -94,16 +104,6 @@ paths:
       summary: Deletes a product from the database.
       tags:
       - products
-    put:
-      operationId: putProduct
-      responses:
-        "201":
-          $ref: '#/responses/noContentResponse'
-        "404":
-          $ref: '#/responses/errorResponse'
-      summary: Updates a product from the database.
-      tags:
-      - products
 produces:
 - application/json
 responses:
@@ -111,7 +111,8 @@ responses:
     description: Generic error message returned as a string
     schema:
       $ref: '#/definitions/GenericError'
-  noContentResponse: {}
+  noContentResponse:
+    description: No content is returned by this API endpoint
   productsResponse:
     description: A list of products.
     schema:
